# knightos

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE  Makefile  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  linker.ld  makefile  x86-unknown-bare_metal.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/: colors.h  kernel.c  kernel.rs  main.rs
src/backend/: mod.rs
src/backend/allocator/: mod.rs
src/backend/descriptors/: gdt.rs  idt.rs  pic.rs
src/backend/interrupts/: mod.rs  utils.rs
src/backend/memory/: mod.rs  pmm.rs  vmm.rs
src/backend/multitasking/: mod.rs
src/backend/paging/: mod.rs
src/backend/serial/: macros.rs  mod.rs
src/backend/vga/: colors.rs  macros.rs  mod.rs
src/boot/: boot.s  grub.cfg  linker.ld
src/descriptors/: gdt.rs  idt.rs  pic.rs
src/display/: display.rs
src/interrupts/: mod.rs
src/paging/: mod.rs
src/serial/: mod.rs
src/testing/: mod.rs
src/user_interface/: mod.rs  utils.rs
src/user_interface/graphic_user_interface/: mod.rs  text.rs
src/user_interface/graphics/: helper.rs  mod.rs  text.rs
src/user_interface/input/: input.rs  mod.rs
src/user_interface/text_user_interface/: mod.rs
src/utils/: mod.rs
src/vga/: colors.rs  mod.rs
tests/: tests.md
