[package]
name = "knightos"
version = "0.1.0"
edition = "2024"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
spin = "0.10.0"


[[bin]]
name = "knightos"
path = "src/main.rs"
test = false
doctest = false
bench = false


