[package]
name = "knightos"
version = "0.1.0"
edition = "2024"
description = "A handcrafted, bare-metal x86 operating system kernel written in Rust"
license = "MIT"
repository = "https://github.com/knightmar/knightos"
documentation = "https://github.com/knightmar/knightos#readme"
keywords = ["os", "kernel", "x86", "bare-metal", "rust"]

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
bitfield-struct = "0.12.1"
linked_list_allocator = "0.10.5"
hashbrown = "0.17.1"

[dev-dependencies]
claim = "0.5.0"

[[bin]]
name = "knightos"
path = "src/main.rs"
test = true
doctest = false
bench = false
